--- a/content/建模/水平线.md
+++ b/content/建模/水平线.md
@@ -1,6 +1,10 @@
+---
+title: "水平线"
+---
 创建水平线的办法.
 
--> [创建笔记](%E5%88%9B%E5%BB%BA%E7%AC%94%E8%AE%B0.md)
 
-返回: [\_index](../index.md)
+-> [[创建笔记]]
 
+
+返回: [[_index]]
