--- a/content/建模/水平线.md
+++ b/content/建模/水平线.md
@@ -1,10 +1,19 @@
 ---
+
 title: "水平线"
+
 ---
+
 创建水平线的办法.
 
 
--> [[创建笔记]]
 
 
-返回: [[_index]]
+
+-> [创建笔记](建模/创建笔记.md)
+
+
+
+
+
+返回: [_index](_index.md)
